unpackaged/main/default/objects/Add_On_Batch__c/Add_On_Batch__c.object-meta.xml
<CustomObject>
    <label>Bank Account Add-On Batch</label>
    <nameField>
        <displayFormat>AO{000000}</displayFormat>
        <label>Bank Account Add-On Batch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Add-On Batches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>