unpackaged/main/default/objects/Add_On_Batch__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>ValuePlus__r.Account__r.Name</formula>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>