unpackaged/main/default/objects/Add_On_Batch__c/fields/ACH_Processor__c.field-meta.xml
<CustomField>
    <fullName>ACH_Processor__c</fullName>
    <label>ACH Processor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>ProfitStars</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>