unpackaged/main/default/objects/Add_On_Batch__c/fields/Add_On_Form_Received__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Form_Received__c</fullName>
    <label>Add-On Form Received</label>
    <type>Date</type>
</CustomField>