unpackaged/main/default/objects/Add_On_Batch__c/fields/Add_On_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Form_Sent__c</fullName>
    <description>Updated R177574</description>
    <label>Bank Account Auth Form Sent</label>
    <type>Date</type>
</CustomField>