unpackaged/main/default/objects/Add_On_Batch__c/fields/APM_Bank_Account_Links__c.field-meta.xml
<CustomField>
    <fullName>APM_Bank_Account_Links__c</fullName>
    <description>R177491</description>
    <label>APM Bank Account Links</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>