unpackaged/main/default/objects/Add_On_Batch__c/fields/Bank_Change__c.field-meta.xml
<CustomField>
    <fullName>Bank_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R177575</description>
    <label>Bank Change</label>
    <type>Checkbox</type>
</CustomField>