unpackaged/main/default/objects/Add_On_Batch__c/fields/Can_View_Bank_Account_s__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Bank_Account_s__c</fullName>
    <description>Will determine which Conga Template to Use on Bank Auth</description>
    <formula>OR( $Profile.Name = &#39;Value+ Management&#39;, $Profile.Name = &#39;Value+ Payment Services&#39;, $Profile.Name = &#39;Value+ Website Services&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Can View Bank Account #s</label>
    <type>Checkbox</type>
</CustomField>