unpackaged/main/default/objects/Add_On_Batch__c/fields/Client_Requested__c.field-meta.xml
<CustomField>
    <fullName>Client_Requested__c</fullName>
    <label>Client Requested</label>
    <type>Date</type>
</CustomField>