unpackaged/main/default/objects/Add_On_Batch__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>