unpackaged/main/default/objects/Add_On_Batch__c/fields/Conga_Template__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template__c</fullName>
    <formula>IF( More_Than_14_Bank_Accounts_in_Batch__c = TRUE, &#39;a1T80000000MEwa,a1T80000000M6pt&#39;, &#39;a1T80000000MEwQ&#39;)</formula>
    <label>Conga Template</label>
    <type>Text</type>
</CustomField>