unpackaged/main/default/objects/Add_On_Batch__c/fields/Conga_Template_Send_Bank_Auth__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Send_Bank_Auth__c</fullName>
    <description>Field to determine which template is sent depending on the Number of Bank Accounts and the related Value+ Record Type.</description>
    <formula>IF(More_Than_14_Bank_Accounts_in_Batch__c = TRUE &amp;&amp;  ValuePlus__r.RecordType.DeveloperName = &#39;APM_Payments&#39;, &#39;a1T80000000MZwt,a1T80000000MZpt&#39;, 
IF(More_Than_14_Bank_Accounts_in_Batch__c = TRUE &amp;&amp;  ValuePlus__r.RecordType.DeveloperName = &#39;IM_Payments&#39;, &#39;a1T2E000009HK06,a1T80000000MZpt&#39;, 
IF(More_Than_14_Bank_Accounts_in_Batch__c = FALSE &amp;&amp;  ValuePlus__r.RecordType.DeveloperName = &#39;APM_Payments&#39;, &#39;a1T80000005Idot&#39;, 
&#39;a1T2E000009HK01&#39;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Template Send Bank Auth</label>
    <type>Text</type>
</CustomField>