unpackaged/main/default/objects/Add_On_Batch__c/fields/Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bank Account Add-On Batches</relationshipLabel>
    <relationshipName>Bank_Account_Add_On_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>