unpackaged/main/default/objects/Add_On_Batch__c/fields/Customer_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Contact_ID__c</fullName>
    <description>R177356, R179476</description>
    <formula>Customer_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Contact ID</label>
    <type>Text</type>
</CustomField>