unpackaged/main/default/objects/Add_On_Batch__c/fields/Days_in_Process__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Process__c</fullName>
    <formula>IF( ISBLANK(Live__c), TODAY()- Client_Requested__c, Live__c - Client_Requested__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Process</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>