unpackaged/main/default/objects/Add_On_Batch__c/fields/Last_Updated_in_ProfitStars__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_in_ProfitStars__c</fullName>
    <label>Last Updated in ProfitStars</label>
    <type>DateTime</type>
</CustomField>