unpackaged/main/default/objects/Add_On_Batch__c/fields/Link_to_Account__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Account__c</fullName>
    <description>R14011</description>
    <formula>HYPERLINK(&quot;/&quot; &amp; ValuePlus__r.Account__r.Id,ValuePlus__r.Account__r.Name,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to Account:</label>
    <type>Text</type>
</CustomField>