unpackaged/main/default/objects/Add_On_Batch__c/fields/Live__c.field-meta.xml
<CustomField>
    <fullName>Live__c</fullName>
    <label>Live</label>
    <type>Date</type>
</CustomField>