unpackaged/main/default/objects/Add_On_Batch__c/fields/More_Than_14_Bank_Accounts_in_Batch__c.field-meta.xml
<CustomField>
    <fullName>More_Than_14_Bank_Accounts_in_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More Than 14 Bank Accounts in Batch</label>
    <type>Checkbox</type>
</CustomField>