unpackaged/main/default/objects/Add_On_Batch__c/fields/Payment_Services_Rep__c.field-meta.xml
<CustomField>
    <fullName>Payment_Services_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Services Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bank_Account_Add_On_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>