unpackaged/main/default/objects/Add_On_Batch__c/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R177576</description>
    <label>POC</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bank Account Add-On Batches (POC)</relationshipLabel>
    <relationshipName>Bank_Account_Add_On_Batches1</relationshipName>
    <type>Lookup</type>
</CustomField>