unpackaged/main/default/objects/Add_On_Batch__c/fields/POC_Email__c.field-meta.xml
<CustomField>
    <fullName>POC_Email__c</fullName>
    <description>R177576</description>
    <formula>POC__r.Email</formula>
    <label>POC Email</label>
    <type>Text</type>
</CustomField>