unpackaged/main/default/objects/Add_On_Batch__c/fields/QA_Complete__c.field-meta.xml
<CustomField>
    <fullName>QA_Complete__c</fullName>
    <label>QA Complete</label>
    <type>Date</type>
</CustomField>