unpackaged/main/default/objects/Add_On_Batch__c/fields/Ready_for_Cybersource_Date__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Cybersource_Date__c</fullName>
    <description>R177574</description>
    <label>Ready for Cybersource Date</label>
    <type>Date</type>
</CustomField>