unpackaged/main/default/objects/Add_On_Batch__c/fields/Request_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Request_Canceled__c</fullName>
    <description>R177574</description>
    <label>Request Canceled</label>
    <type>Date</type>
</CustomField>