unpackaged/main/default/objects/Add_On_Batch__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Requested</fullName>
            </value>
            <value>
                <fullName>Bank Auth Form Sent</fullName>
            </value>
            <value>
                <fullName>Ready for Cybersource</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Request Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>