unpackaged/main/default/objects/Add_On_Batch__c/fields/Stage_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>Stage_Entered_Date__c</fullName>
    <label>Stage Entered Date</label>
    <type>Date</type>
</CustomField>