unpackaged/main/default/objects/Add_On_Batch__c/fields/ValuePlus__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus__c</fullName>
    <label>Value+</label>
    <referenceTo>ValuePlus__c</referenceTo>
    <relationshipLabel>Bank Account Add-On Batches</relationshipLabel>
    <relationshipName>Bank_Account_Add_On_Batches</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>