unpackaged/main/default/objects/Add_On_Batch__c/fields/ValuePlus_RecordType__c.field-meta.xml
<CustomField>
    <fullName>ValuePlus_RecordType__c</fullName>
    <description>R2029706</description>
    <formula>IF(ValuePlus__r.RecordType.DeveloperName = &#39;APM_Payments&#39;, &#39;PaymentsScreening&#39;, &#39;IM+Sales&#39;)</formula>
    <label>Value+ Record Type</label>
    <type>Text</type>
</CustomField>